--- a/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
+++ b/pages/docs/guides/linking-a-domain-to-your-dashboard.mdx
@@ -2,10 +2,9 @@
 
 import { Callout } from 'nextra-theme-docs'
 
-<Callout emoji='⚠️' type='warning'>
-  This guide explains you how to link a domain to your dashboard. If you want to expose other apps, you need to configure them individually. You cannot use this guide to expose individual apps.
+<Callout emoji="🚨">
+For security reasons, it is highly discouraged to expose your dashboard to the internet. We recommend you to [expose only individual apps](/docs/guides/expose-your-apps). And follow this guide only if you have a particular use case (e.g. a demo instance of tipi)
 </Callout>
-
 
 If you want to link a domain to your dashboard, you can do so by providing the `domain` option in your dashboard settings or with the `settings.json` file.
 
