docs(guides): add docs about backup and restore

--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -68,7 +68,7 @@ This command updates tipi to the latest version available.
 You can update to the latest version with this command:
 
 ```bash
-sudo ./runtipi-cli update
+sudo ./runtipi-cli update latest
 ```
 
 If you want to specify a specific version to update or downgrade to you can use the command 
