--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,7 +1,7 @@
 import "../styles.css";
 import { Analytics } from '@vercel/analytics/react';
 import "nextra-theme-docs/style.css";
-import { Inter } from "@next/font/google";
+import { Inter } from "next/font/google";
 
 export const inter = Inter({
   subsets: ['latin'],
