--- a/pages/docs/contributing/running-the-cli-locally.mdx
+++ b/pages/docs/contributing/running-the-cli-locally.mdx
@@ -5,7 +5,7 @@ While the CLI is not meant to run during development, when developing new featur
 You can do so by navigating to the `packages/cli` folder and executing the following command:
 
 ```bash
-npx tsx ./src/index.ts <command>
+NODE_ENV=development npx tsx ./src/index.ts <command>
 ```
 
 This will run the CLI using the TypeScript compiler and execute the `index.ts` file with the given command.
