--- a/pages/docs/guides/auto-update.mdx
+++ b/pages/docs/guides/auto-update.mdx
@@ -42,7 +42,7 @@ else
 fi
 ```
 
-Now, we need to set the file to be executable with"
+Now, we need to set the file to be executable with
 ```bash
 chmod 755 /root/runtipi/check-update.sh
 ```
