--- a/pages/docs/getting-started/installation.mdx
+++ b/pages/docs/getting-started/installation.mdx
@@ -1,4 +1,4 @@
-import { Callout } from 'nextra-theme-docs'
+import { Callout } from 'nextra-theme-docs';
 
 # Installation
 
@@ -27,6 +27,11 @@ Our software uses containerization and has the same hardware requirements as Doc
 - x86_64/amd64
 - arm64
 
+<Callout>
+  Not all apps are supported in the arm64 architecture, tipi will auto hide apps that are not
+  supported by your architecture.
+</Callout>
+
 ## OS Requirements
 
 Ubuntu 18.04 LTS or higher is recommended. However other major Linux distribution are supported but may lead to installation issues.
@@ -35,14 +40,17 @@ Please file an issue if you encounter one.
 If Docker is already installed on your machine, Tipi will use it to run the dashboard. Otherwise, it will install Docker for you.
 
 <Callout type="warning">
-If you already have docker installed make sure to have the docker compose plugin installed.<br/>
-Run `docker compose version` to check if it is installed. Instructions to install it can be found [here](https://docs.docker.com/compose/install/linux/).
+  If you already have docker installed make sure to have the docker compose plugin installed.
+  <br />
+  Run `docker compose version` to check if it is installed. Instructions to install it can be found
+  [here](https://docs.docker.com/compose/install/linux/).
 </Callout>
 
 <Callout type="warning">
-If you already have docker installed make sure you used the official docker install script from [here](https://get.docker.sh) as this 
-guarantees that you have the latest build. If you used a command like ```sudo apt install docker.io``` you may have an outdated version and
-issues may occur.
+  If you already have docker installed make sure you used the official docker install script from
+  [here](https://get.docker.sh) as this guarantees that you have the latest build. If you used a
+  command like ```sudo apt install docker.io``` you may have an outdated version and issues may
+  occur.
 </Callout>
 
 ## Download and install Tipi
@@ -54,12 +62,12 @@ curl -L https://setup.runtipi.io | bash
 ```
 
 If you have some issue with the command above, you can also download the script directly from github:
-  
+
 ```bash
 curl -L https://raw.githubusercontent.com/runtipi/runtipi/master/scripts/install.sh | bash
 ```
 
-## Update 
+## Update
 
 This command updates tipi to the latest version available.
 
@@ -69,7 +77,7 @@ You can update to the latest version with this command:
 sudo ./runtipi-cli update latest
 ```
 
-If you want to specify a specific version to update or downgrade to you can use the command 
+If you want to specify a specific version to update or downgrade to you can use the command
 like this:
 
 ```bash
@@ -77,6 +85,6 @@ sudo ./runtipi-cli update v2.0.7
 ```
 
 <Callout type="warning">
-You can downgrade Tipi to a previous version by running the update command with the version you want to downgrade to.
-However, this is highly discouraged as it may lead to breaking your install.
+  You can downgrade Tipi to a previous version by running the update command with the version you
+  want to downgrade to. However, this is highly discouraged as it may lead to breaking your install.
 </Callout>
