--- a/pages/docs/introduction.mdx
+++ b/pages/docs/introduction.mdx
@@ -1,4 +1,4 @@
-import { AppScreenshot } from 'components/AppScreenshot';
+import { AppScreenshot } from '@/components/AppScreenshot';
 import { Card, Cards, Callout } from 'nextra-theme-docs';
 import { WrenchIcon, LightBulbIcon } from '@heroicons/react/24/outline';
 
@@ -7,7 +7,8 @@ import { WrenchIcon, LightBulbIcon } from '@heroicons/react/24/outline';
 <AppScreenshot />
 
 <Callout emoji="🚨">
-  These docs are highly incomplete and are a continuous work in progress. Please help us by contributing to the project or by providing feedback.
+  These docs are highly incomplete and are a continuous work in progress. Please help us by
+  contributing to the project or by providing feedback.
 </Callout>
 
 Tipi is an open source personal homeserver orchestrator that enables you to manage and run multiple services on a single server.
