--- a/pages/docs/reference/breaking-updates.mdx
+++ b/pages/docs/reference/breaking-updates.mdx
@@ -1,4 +1,4 @@
-import { Steps, Callout, FileTree } from 'nextra-theme-docs'
+import { Steps, Callout, FileTree } from 'nextra-theme-docs';
 
 # Breaking updates
 
@@ -10,7 +10,7 @@ This page is dedicated to describe breaking updates and guide you through the pr
 
 In the version **3.0.0** we completely re-wrote the `runtipi-cli` tool.
 The new CLI is written in Rust and it is much more stable, faster and smaller than the previous version.
-You won't be able to update to the version **3.0.0** using the old node CLI. In order to update to the version **3.0.0** you will need to manually download the new CLI and 
+You won't be able to update to the version **3.0.0** using the old node CLI. In order to update to the version **3.0.0** you will need to manually download the new CLI and
 replace the old one.
 
 We have prepared a script that will do the update for you. You can run it by executing the following command in your `runtipi` directory:
@@ -56,6 +56,12 @@ rm runtipi-cli
 
 ```bash
 mv runtipi-cli-linux-<arch> runtipi-cli
+```
+
+### Make the new CLI executable
+
+```bash
+chmod +x ./runtipi-cli
 ```
 
 ### Start your instance
