docs(third-party): change wording to signal opt-in feature

--- a/pages/docs/reference/third-party-services.mdx
+++ b/pages/docs/reference/third-party-services.mdx
@@ -2,8 +2,9 @@
 
 ## Telemetry
 
-By default your Tipi instance will send anonymous crash reports to [Sentry](https://sentry.io). These reports help the team to debug and resolve issues in a fast manner.
-If you don't want to participate in this anonymous program you can disable the option in the settings page of the dashboard or by adding
+After install Tipi will ask you if you agree to send anonymous crash reports to [Sentry](https://sentry.io). This is one of the best ways to help
+the team if you are not able to contribute. These reports help the team to debug and resolve issues in a fast manner.
+If you change your mind after enabling it, you can disable the option in the settings page of the dashboard or by adding
 the following option in your `settings.json` file:
 
 ```json
